# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
#

2004-12-23 18:00:39 GMT	John Goerzen <jgoerzen@complete.org>	patch-160

    Summary:
      Checkpointing lsl
    Revision:
      missingh--head--0.7--patch-160


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS/Utils.hs


2004-12-23 17:59:37 GMT	John Goerzen <jgoerzen@complete.org>	patch-159

    Summary:
      Checkpointing lsl work
    Revision:
      missingh--head--0.7--patch-159


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS/Utils.hs


2004-12-23 17:48:25 GMT	John Goerzen <jgoerzen@complete.org>	patch-158

    Summary:
      Checkpointing lsl
    Revision:
      missingh--head--0.7--patch-158


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS/Utils.hs


2004-12-23 17:37:25 GMT	John Goerzen <jgoerzen@complete.org>	patch-157

    Summary:
      Checkpointing ReadOnly cleanup
    Revision:
      missingh--head--0.7--patch-157


    modified files:
     ChangeLog ftptest.hs libsrc/MissingH/IO/HVFS/Combinators.hs
     libsrc/MissingH/IO/HVFS/Utils.hs libsrc/MissingH/Path.hs


2004-12-23 17:33:24 GMT	John Goerzen <jgoerzen@complete.org>	patch-156

    Summary:
      Added HVFSReadOnly
    Revision:
      missingh--head--0.7--patch-156


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS/Combinators.hs


2004-12-23 17:21:02 GMT	John Goerzen <jgoerzen@complete.org>	patch-155

    Summary:
      Added size to the simple stat info
    Revision:
      missingh--head--0.7--patch-155


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS.hs
     libsrc/MissingH/IO/HVFS/InstanceHelpers.hs


2004-12-23 17:11:12 GMT	John Goerzen <jgoerzen@complete.org>	patch-154

    Summary:
      Eased encapsulation
    Revision:
      missingh--head--0.7--patch-154


    modified files:
     ChangeLog libsrc/MissingH/IO/HVFS.hs

